--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
     "@typescript-eslint/parser": "^5.57.0",
     "@uiw/react-github-corners": "1.5.15",
     "@vitejs/plugin-react": "^3.1.0",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^0.33.0",
     "ajv": "^8.12.0",
     "autoprefixer": "^10.4.14",
     "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.6",
