--- a/package.json
+++ b/package.json
@@ -153,30 +153,30 @@
     "@typescript-eslint/parser": "^5.57.0",
     "@uiw/react-github-corners": "1.5.15",
     "@vitejs/plugin-react": "^3.1.0",
-    "@vitest/coverage-c8": "^0.29.8",
+    "@vitest/coverage-v8": "^0.33.0",
     "ajv": "^8.12.0",
     "autoprefixer": "^10.4.14",
     "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.6",
     "cpr": "^3.0.1",
-    "dependency-cruiser": "^12.11.0",
+    "dependency-cruiser": "^13.1.1",
     "eslint": "^8.45.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-i18n-checker": "^1.4.0",
     "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "happy-dom": "^8.9.0",
+    "happy-dom": "^10.5.2",
     "husky": "^8.0.3",
-    "i18next-conv": "13.1.1",
-    "i18next-scanner": "^4.2.0",
+    "i18next-conv": "14.0.0",
+    "i18next-scanner": "^4.3.0",
     "lint-staged": "^13.2.3",
     "minimist": "^1.2.8",
     "npm-run-all": "^4.1.5",
     "open-cli": "^7.2.0",
-    "patch-package": "^6.5.1",
+    "patch-package": "^7.0.2",
     "postcss-custom-media": "^8.0.0",
-    "postcss-loader": "^7.1.0",
+    "postcss-loader": "^7.3.3",
     "postcss-nested": "^6.0.1",
     "postcss-normalize": "^10.0.1",
     "prettier": "^2.8.7",
@@ -190,9 +190,9 @@
     "tsx": "^3.12.7",
     "typescript": "5.1.6",
     "vi-fetch": "^0.8.0",
-    "vite": "^4.4.4",
+    "vite": "^4.4.5",
     "vite-plugin-html": "^3.2.0",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.29.8"
+    "vitest": "^0.33.0"
   }
 }
