--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "jwt-decode": "^3.1.2",
-    "maplibre-gl": "^3.2.0",
+    "maplibre-gl": "^3.2.1",
     "nanoid": "^4.0.2",
     "nanoid-dictionary": "^4.3.0",
     "papaparse": "^5.3.2",
@@ -133,7 +133,7 @@
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-i18next": "^12.1.5",
-    "react-lazily": "^0.9.1",
+    "react-lazily": "^0.9.2",
     "react-markdown": "^8.0.5",
     "react-router": "^5.3.4",
     "react-router-cache-route": "^1.12.11",
@@ -189,8 +189,9 @@
     "ts-json-schema-generator": "^1.2.0",
     "tsx": "^3.12.7",
     "typescript": "5.1.6",
+    "typescript-plugin-css-modules": "^5.0.1",
     "vi-fetch": "^0.8.0",
-    "vite": "^4.4.5",
+    "vite": "^4.4.7",
     "vite-plugin-html": "^3.2.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.33.0"
