--- a/configs/config.default.json
+++ b/configs/config.default.json
@@ -34,6 +34,7 @@
     "tooltip"
   ],
   "DEFAULT_FEED": "kontur-public",
+  "DEFAULT_LANGUAGE": "en",
   "OSM_EDITORS": [
     {
       "id": "josm",
