--- a/.github/workflows/size_report.yml
+++ b/.github/workflows/size_report.yml
@@ -14,12 +14,12 @@ jobs:
         ref: ${{ github.base_ref }}
 
     - name: Install dependencies
-      run: npm ci
+      run: pnpm ci
       env:
         NODE_AUTH_TOKEN: ${{secrets.TOKEN_REPO}}
 
     - name: Build
-      run: npm run build
+      run: pnpm run build
 
     - name: Upload base size-report.json
       uses: actions/upload-artifact@v3
@@ -36,12 +36,12 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: npm ci
+      run: pnpm ci
       env:
         NODE_AUTH_TOKEN: ${{secrets.TOKEN_REPO}}
 
     - name: Build
-      run: npm run build
+      run: pnpm run build
 
     - name: Upload base size-report.json
       uses: actions/upload-artifact@v3
