--- a/.github/workflows/translations_report.yml
+++ b/.github/workflows/translations_report.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
       - run: pnpm ci --include=dev
