--- a/.github/workflows/size_report.yml
+++ b/.github/workflows/size_report.yml
@@ -14,7 +14,7 @@ jobs:
         ref: ${{ github.base_ref }}
 
     - name: Install dependencies
-      run: pnpm ci
+      run: pnpm i
       env:
         NODE_AUTH_TOKEN: ${{secrets.TOKEN_REPO}}
 
@@ -36,7 +36,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: pnpm ci
+      run: pnpm i
       env:
         NODE_AUTH_TOKEN: ${{secrets.TOKEN_REPO}}
 
