--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,11 +29,8 @@ jobs:
         with:
           node-version: "20"
           
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
-        with:
-          version: 8
-
+      - run: corepack enable
+      - run: corepack prepare pnpm@8 --activate
       - name: Get pnpm store directory
         shell: bash
         run: |
