--- a/.github/workflows/translations_report.yml
+++ b/.github/workflows/translations_report.yml
@@ -13,10 +13,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "20"
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
-        with:
-          version: 8
+      - run: corepack enable
+      - run: corepack prepare pnpm@8 --activate
       - name: Get pnpm store directory
         shell: bash
         run: |
@@ -28,7 +26,7 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm i --include=dev
+      - run: pnpm i
       - run: pnpm run --silent i18n:report -- --out md > ./.github/workflows/translations-report.md
       - name: Comment
         uses: NejcZdovc/comment-pr@v1
