--- a/package.json
+++ b/package.json
@@ -87,10 +87,13 @@
     "@konturio/floating": "^1.1.1",
     "@konturio/ui-kit": "^5.1.3",
     "@loaders.gl/core": "^3.4.14",
+    "@loaders.gl/loader-utils": "^3.4.14",
+    "@loaders.gl/worker-utils": "^3.4.14",
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@reatom/core": "^2.0.22",
     "@reatom/react": "^2.0.19",
+    "@testing-library/react": "^14.1.2",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
     "@turf/centroid": "^6.5.0",
@@ -108,23 +111,54 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.10",
+    "@types/sinon": "^17.0.2",
     "@types/w3c-generic-sensor": "^1.0.9",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@uiw/react-github-corners": "1.5.16",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.0.4",
+    "ajv": "^8.12.0",
+    "autoprefixer": "^10.4.16",
+    "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
     "clsx": "^1.2.1",
+    "cpr": "^3.0.1",
     "date-fns": "^2.30.0",
+    "dependency-cruiser": "^15.5.0",
     "dnd-core": "^16.0.1",
+    "eslint": "^8.56.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-i18n-checker": "^1.4.0",
+    "eslint-plugin-i18n-json": "^4.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-saver": "^2.0.5",
     "geojson-polygon-self-intersections": "^1.2.1",
+    "happy-dom": "^12.10.3",
     "hash-wasm": "^4.11.0",
     "history": "^4.10.1",
     "hsluv": "^1.0.1",
     "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-conv": "14.0.0",
+    "i18next-scanner": "^4.4.0",
     "jwt-decode": "^4.0.0",
+    "lint-staged": "^15.2.0",
     "maplibre-gl": "^3.6.2",
+    "minimist": "^1.2.8",
     "nanoid": "^5.0.4",
     "nanoid-dictionary": "^4.3.0",
+    "npm-run-all": "^4.1.5",
     "papaparse": "^5.4.1",
+    "patch-package": "^8.0.0",
+    "postcss-custom-media": "^8.0.2",
+    "postcss-loader": "^7.3.3",
+    "postcss-nested": "^6.0.1",
+    "postcss-normalize": "^10.0.1",
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
+    "react-cosmos": "5.7.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -138,56 +172,24 @@
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.6.2",
     "remark-gfm": "^3.0.1",
-    "superstruct": "^1.0.3",
-    "uhtml": "^4.1.21",
-    "utility-types": "^3.10.0",
-    "vite-plugin-mkcert": "^1.17.1",
-    "wretch": "^2.7.1",
-    "@testing-library/react": "^14.1.2",
-    "@types/sinon": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@uiw/react-github-corners": "1.5.16",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.0.4",
-    "ajv": "^8.12.0",
-    "autoprefixer": "^10.4.16",
-    "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
-    "cpr": "^3.0.1",
-    "dependency-cruiser": "^15.5.0",
-    "eslint": "^8.56.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-i18n-checker": "^1.4.0",
-    "eslint-plugin-i18n-json": "^4.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "happy-dom": "^12.10.3",
-    "i18next-conv": "14.0.0",
-    "i18next-scanner": "^4.4.0",
-    "lint-staged": "^15.2.0",
-    "npm-run-all": "^4.1.5",
-    "minimist": "^1.2.8",
-    "patch-package": "^8.0.0",
-    "postcss-custom-media": "^8.0.2",
-    "postcss-loader": "^7.3.3",
-    "postcss-nested": "^6.0.1",
-    "postcss-normalize": "^10.0.1",
-    "prettier": "^3.1.1",
-    "react-cosmos": "5.7.2",
+    "rollup-plugin-visualizer": "^5.11.0",
     "sinon": "^17.0.1",
     "stylelint": "^16.0.2",
     "stylelint-config-recommended": "^14.0.0",
+    "superstruct": "^1.0.3",
     "ts-json-schema-generator": "^1.5.0",
     "tsx": "^4.6.2",
     "typescript": "5.3.3",
     "typescript-plugin-css-modules": "^5.0.2",
+    "uhtml": "^4.1.21",
+    "utility-types": "^3.10.0",
     "vi-fetch": "^0.8.0",
     "vite": "^5.0.10",
     "vite-plugin-html": "^3.2.0",
+    "vite-plugin-mkcert": "^1.17.1",
     "vite-tsconfig-paths": "^4.2.2",
     "vitest": "^1.0.4",
-    "rollup-plugin-visualizer": "^5.11.0"
+    "wretch": "^2.7.1"
   },
   "devDependencies": {
     "husky": "^8.0.3",
