fix node version in pnpm scripts

--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "docker:build": "docker build -f ./Dockerfile ./ -t ghcr.io/konturio/disaster-ninja-fe:latest",
     "docker:run": "docker run --rm -d -p 80:80/tcp ghcr.io/konturio/disaster-ninja-fe:latest",
     "prepare": "node ./scripts/husky-prepare.js",
-    "auto:open": "npx open-cli http://localhost:5000",
+    "auto:open": "open-cli http://localhost:5000",
     "auto:cosmos": "cosmos --config cosmos.config.json",
     "auto:cosmos:export": "patch-package && cosmos-export --config cosmos.config.export.json",
     "auto:cosmos:renderer": "vite --config cosmos.vite.config.ts --force serve --port=8080",
     "auto:cosmos:renderer:export": "vite build --config cosmos.vite.config.ts",
     "release": "node ./scripts/auto-release/index.mjs",
     "link:packages": "node ./scripts/auto-link/index.mjs",
-    "i18n:export": "npx tsx ./scripts/i18n/convertion.ts --to-gettext",
-    "i18n:import": "npx tsx ./scripts/i18n/convertion.ts --to-i18next",
-    "i18n:report": "npx tsx ./scripts/i18n/diagnostic.ts",
+    "i18n:export": "tsx ./scripts/i18n/convertion.ts --to-gettext",
+    "i18n:import": "tsx ./scripts/i18n/convertion.ts --to-i18next",
+    "i18n:report": "tsx ./scripts/i18n/diagnostic.ts",
     "i18n:update": "i18next-scanner --config i18next-scanner.config.cjs",
     "i18n:gettext-sync": "sh ./scripts/i18n/gettextSync.sh"
   },
