--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,8 @@ name: build
 on:
   push:
     branches:
-      - 'main'
-      - 'release-*'
+      - "main"
+      - "release-*"
   pull_request:
     types:
       - opened
@@ -14,7 +14,7 @@ on:
 
 env:
   NODE_ENV: production
-  AVA_FORCE_CI: 'not-ci'
+  AVA_FORCE_CI: "not-ci"
   REGISTRY: ghcr.io
   IMAGE_REPO: ${{ github.repository }}
 
@@ -27,14 +27,24 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: "20"
+          
+      - run: corepack enable
+      - run: corepack prepare pnpm@8 --activate
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
       - uses: actions/cache@v3
+        name: Setup pnpm cache
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-node-
-      - run: npm run i18n:gettext-sync
+            ${{ runner.os }}-pnpm-store-
+
+      - run: pnpm run i18n:gettext-sync
       - shell: bash
         run: |
           status=$(git status --porcelain)
@@ -44,14 +54,13 @@ jobs:
           else
             echo "Translations are synced."
           fi
-      - run: npm ci --include=dev
-      - run: npm run postinstall
-      - run: npm run lint
-      - run: npm run typecheck
-      - run: env NODE_ENV=test npm run coverage
+      - run: pnpm i
+      - run: pnpm run postinstall
+      - run: pnpm run lint
+      - run: pnpm run typecheck
+      - run: env NODE_ENV=test pnpm run coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
-
 
   build:
     runs-on: ubuntu-latest
@@ -60,9 +69,22 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18'
-      - run: npm ci --include=dev
-      - run: npm run build
+          node-version: "20"
+      - run: corepack enable
+      - run: corepack prepare pnpm@8 --activate
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+      - run: pnpm i
+      - run: pnpm run build
       - name: Display structure of builded files
         run: ls -R
         working-directory: .
