--- a/.github/workflows/translations_report.yml
+++ b/.github/workflows/translations_report.yml
@@ -12,15 +12,22 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: "20"
+      - run: corepack enable
+      - run: corepack prepare pnpm@8 --activate
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
       - uses: actions/cache@v3
+        name: Setup pnpm cache
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-node-
-      - run: npm ci --include=dev
-      - run: npm run --silent i18n:report -- --out md > ./.github/workflows/translations-report.md 
+            ${{ runner.os }}-pnpm-store-
+      - run: pnpm i
+      - run: pnpm run --silent i18n:report -- --out md > ./.github/workflows/translations-report.md
       - name: Comment
         uses: NejcZdovc/comment-pr@v1
         with:
