--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "license": "MIT",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "scripts": {
     "dev": "npm run i18n:import && vite",
@@ -32,16 +32,16 @@
     "docker:build": "docker build -f ./Dockerfile ./ -t ghcr.io/konturio/disaster-ninja-fe:latest",
     "docker:run": "docker run --rm -d -p 80:80/tcp ghcr.io/konturio/disaster-ninja-fe:latest",
     "prepare": "node ./scripts/husky-prepare.js",
-    "auto:open": "npx open-cli http://localhost:5000",
+    "auto:open": "open-cli http://localhost:5000",
     "auto:cosmos": "cosmos --config cosmos.config.json",
     "auto:cosmos:export": "patch-package && cosmos-export --config cosmos.config.export.json",
     "auto:cosmos:renderer": "vite --config cosmos.vite.config.ts --force serve --port=8080",
     "auto:cosmos:renderer:export": "vite build --config cosmos.vite.config.ts",
     "release": "node ./scripts/auto-release/index.mjs",
     "link:packages": "node ./scripts/auto-link/index.mjs",
-    "i18n:export": "npx tsx ./scripts/i18n/convertion.ts --to-gettext",
-    "i18n:import": "npx tsx ./scripts/i18n/convertion.ts --to-i18next",
-    "i18n:report": "npx tsx ./scripts/i18n/diagnostic.ts",
+    "i18n:export": "tsx ./scripts/i18n/convertion.ts --to-gettext",
+    "i18n:import": "tsx ./scripts/i18n/convertion.ts --to-i18next",
+    "i18n:report": "tsx ./scripts/i18n/diagnostic.ts",
     "i18n:update": "i18next-scanner --config i18next-scanner.config.cjs",
     "i18n:gettext-sync": "sh ./scripts/i18n/gettextSync.sh"
   },
@@ -75,23 +75,25 @@
   },
   "dependencies": {
     "@csstools/normalize.css": "^12.0.0",
-    "@deck.gl/core": "^8.8.25",
-    "@deck.gl/extensions": "^8.8.25",
-    "@deck.gl/geo-layers": "^8.8.25",
-    "@deck.gl/layers": "^8.8.25",
-    "@deck.gl/mapbox": "^8.8.25",
-    "@deck.gl/mesh-layers": "^8.8.25",
-    "@github/mini-throttle": "^2.1.0",
+    "@deck.gl/core": "^8.9.33",
+    "@deck.gl/extensions": "^8.9.33",
+    "@deck.gl/geo-layers": "^8.9.33",
+    "@deck.gl/layers": "^8.9.33",
+    "@deck.gl/mapbox": "^8.9.33",
+    "@deck.gl/mesh-layers": "^8.9.33",
+    "@github/mini-throttle": "^2.1.1",
     "@konturio/default-icons": "^2.2.2",
     "@konturio/default-theme": "3.2.4",
     "@konturio/floating": "^1.1.1",
     "@konturio/ui-kit": "^5.1.3",
-    "@loaders.gl/core": "^3.3.1",
-    "@mdx-js/rollup": "^2.3.0",
+    "@loaders.gl/core": "^3.4.14",
+    "@loaders.gl/loader-utils": "^3.4.14",
+    "@loaders.gl/worker-utils": "^3.4.14",
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@reatom/core": "^2.0.22",
     "@reatom/react": "^2.0.19",
+    "@testing-library/react": "^14.1.2",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
     "@turf/centroid": "^6.5.0",
@@ -100,101 +102,97 @@
     "@turf/helpers": "^6.5.0",
     "@turf/kinks": "^6.5.0",
     "@turf/union": "^6.5.0",
-    "@types/file-saver": "^2.0.5",
+    "@types/file-saver": "^2.0.7",
     "@types/geojson": "^7946.0.10",
-    "@types/node": "^18.15.10",
-    "@types/papaparse": "^5.3.7",
+    "@types/node": "^20.10.4",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-transition-group": "^4.4.5",
-    "@types/w3c-generic-sensor": "^1.0.6",
+    "@types/react-transition-group": "^4.4.10",
+    "@types/sinon": "^17.0.2",
+    "@types/w3c-generic-sensor": "^1.0.9",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@uiw/react-github-corners": "1.5.16",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.0.4",
+    "ajv": "^8.12.0",
+    "autoprefixer": "^10.4.16",
+    "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
     "clsx": "^1.2.1",
-    "color-interpolate": "^1.0.5",
-    "date-fns": "^2.29.3",
+    "cpr": "^3.0.1",
+    "date-fns": "^2.30.0",
+    "dependency-cruiser": "^15.5.0",
     "dnd-core": "^16.0.1",
+    "eslint": "^8.56.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-i18n-checker": "^1.4.0",
+    "eslint-plugin-i18n-json": "^4.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-saver": "^2.0.5",
     "geojson-polygon-self-intersections": "^1.2.1",
-    "h3-js": "^3.7.2",
-    "hash-wasm": "^4.9.0",
+    "happy-dom": "^12.10.3",
+    "hash-wasm": "^4.11.0",
     "history": "^4.10.1",
-    "hsluv": "^1.0.0",
-    "i18next": "^22.4.9",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "jwt-decode": "^3.1.2",
-    "maplibre-gl": "^3.2.1",
-    "nanoid": "^4.0.2",
+    "hsluv": "^1.0.1",
+    "i18next": "^22.5.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-conv": "14.0.0",
+    "i18next-scanner": "^4.4.0",
+    "jwt-decode": "^4.0.0",
+    "lint-staged": "^15.2.0",
+    "maplibre-gl": "^3.6.2",
+    "minimist": "^1.2.8",
+    "nanoid": "^5.0.4",
     "nanoid-dictionary": "^4.3.0",
-    "papaparse": "^5.3.2",
+    "npm-run-all": "^4.1.5",
+    "papaparse": "^5.4.1",
+    "patch-package": "^8.0.0",
+    "postcss-custom-media": "^8.0.2",
+    "postcss-loader": "^7.3.3",
+    "postcss-nested": "^6.0.1",
+    "postcss-normalize": "^10.0.1",
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
+    "react-cosmos": "5.7.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-i18next": "^12.1.5",
+    "react-i18next": "^12.3.1",
     "react-lazily": "^0.9.2",
-    "react-markdown": "^8.0.5",
+    "react-markdown": "^8.0.7",
     "react-router": "^5.3.4",
     "react-router-cache-route": "^1.12.11",
     "react-router-dom": "^5.3.4",
     "react-transition-group": "^4.4.5",
-    "react-virtuoso": "^4.1.0",
+    "react-virtuoso": "^4.6.2",
     "remark-gfm": "^3.0.1",
+    "rollup-plugin-visualizer": "^5.11.0",
+    "sinon": "^17.0.1",
+    "stylelint": "^16.0.2",
+    "stylelint-config-recommended": "^14.0.0",
     "superstruct": "^1.0.3",
-    "uhtml": "^3.2.2",
+    "ts-json-schema-generator": "^1.5.0",
+    "tsx": "^4.6.2",
+    "typescript": "5.3.3",
+    "typescript-plugin-css-modules": "^5.0.2",
+    "uhtml": "^4.1.21",
     "utility-types": "^3.10.0",
-    "vite-plugin-mkcert": "^1.14.0",
-    "wretch": "^2.5.2"
+    "vi-fetch": "^0.8.0",
+    "vite": "^5.0.10",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-mkcert": "^1.17.1",
+    "vite-tsconfig-paths": "^4.2.2",
+    "vitest": "^1.0.4",
+    "wretch": "^2.7.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
-    "@types/sinon": "^10.0.15",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "@uiw/react-github-corners": "1.5.15",
-    "@vitejs/plugin-react": "^3.1.0",
-    "@vitest/coverage-v8": "^0.33.0",
-    "ajv": "^8.12.0",
-    "autoprefixer": "^10.4.14",
-    "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.6",
-    "cpr": "^3.0.1",
-    "dependency-cruiser": "^13.1.1",
-    "eslint": "^8.45.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-i18n-checker": "^1.4.0",
-    "eslint-plugin-i18n-json": "^4.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.33.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "happy-dom": "^10.5.2",
     "husky": "^8.0.3",
-    "i18next-conv": "14.0.0",
-    "i18next-scanner": "^4.3.0",
-    "lint-staged": "^13.2.3",
-    "minimist": "^1.2.8",
-    "npm-run-all": "^4.1.5",
-    "open-cli": "^7.2.0",
-    "patch-package": "^7.0.2",
-    "postcss-custom-media": "^8.0.0",
-    "postcss-loader": "^7.3.3",
-    "postcss-nested": "^6.0.1",
-    "postcss-normalize": "^10.0.1",
-    "prettier": "^2.8.7",
-    "react-cosmos": "5.7.2",
-    "react-test-renderer": "^18.2.0",
-    "rollup-plugin-visualizer": "^5.9.2",
-    "sinon": "^15.2.0",
-    "stylelint": "^14.16.1",
-    "stylelint-config-recommended": "^6.0.0",
-    "ts-json-schema-generator": "^1.2.0",
-    "tsx": "^3.12.7",
-    "typescript": "5.1.6",
-    "typescript-plugin-css-modules": "^5.0.1",
-    "vi-fetch": "^0.8.0",
-    "vite": "^4.4.7",
-    "vite-plugin-html": "^3.2.0",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0"
+    "open-cli": "^7.2.0"
   }
 }
