--- a/package.json
+++ b/package.json
@@ -195,6 +195,10 @@
   },
   "devDependencies": {
     "husky": "^8.0.3",
-    "open-cli": "^7.2.0"
+    "open-cli": "^7.2.0",
+    "chalk": "^5.3.0",
+    "semver": "^7.5.4",
+    "prompts": "^2.4.2"
+
   }
 }
