--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "tsc --noEmit --watch",
     "preupgrade:kontur": "node ./scripts/updateKonturPackages.mjs",
-    "upgrade:kontur": "npm cache clean --force && npm update $(node ./scripts/updateKonturPackages.mjs)",
+    "upgrade:kontur": "pnpm update $(node ./scripts/updateKonturPackages.mjs)",
     "lint-staged": "lint-staged --concurrent false",
     "test:unit": "npm run i18n:import && vitest",
     "coverage": "npm run i18n:import && vitest run --coverage",
@@ -86,7 +86,7 @@
     "@konturio/default-icons": "^2.2.2",
     "@konturio/default-theme": "3.2.4",
     "@konturio/floating": "^1.1.1",
-    "@konturio/ui-kit": "^5.1.3",
+    "@konturio/ui-kit": "^5.1.4",
     "@loaders.gl/core": "^3.4.14",
     "@loaders.gl/loader-utils": "^3.4.14",
     "@loaders.gl/worker-utils": "^3.4.14",
@@ -194,10 +194,10 @@
     "wretch": "^2.7.1"
   },
   "devDependencies": {
+    "chalk": "^5.3.0",
     "husky": "^8.0.3",
     "open-cli": "^7.2.0",
-    "chalk": "^5.3.0",
-    "semver": "^7.5.4",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "semver": "^7.5.4"
   }
 }
