--- a/package.json
+++ b/package.json
@@ -86,13 +86,13 @@
     "@konturio/default-icons": "^2.2.2",
     "@konturio/default-theme": "3.2.4",
     "@konturio/floating": "^1.1.1",
-    "@konturio/ui-kit": "^5.1.3",
+    "@konturio/ui-kit": "5.1.3",
     "@loaders.gl/core": "^3.4.14",
     "@loaders.gl/loader-utils": "^3.4.14",
     "@loaders.gl/worker-utils": "^3.4.14",
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
-    "@reatom/core": "^3.6.5",
+    "@reatom/core": "^3.6.6",
     "@reatom/core-v2": "^3.1.2",
     "@reatom/react-v2": "^3.1.0",
     "@testing-library/react": "^14.1.2",
@@ -105,7 +105,7 @@
     "@turf/kinks": "^6.5.0",
     "@turf/union": "^6.5.0",
     "@types/file-saver": "^2.0.7",
-    "@types/geojson": "^7946.0.10",
+    "@types/geojson": "^7946.0.13",
     "@types/node": "^20.10.4",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.0.29",
@@ -113,15 +113,15 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.10",
-    "@types/sinon": "^17.0.2",
+    "@types/sinon": "^17.0.3",
     "@types/w3c-generic-sensor": "^1.0.9",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
     "@uiw/react-github-corners": "1.5.16",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/coverage-v8": "^1.2.1",
     "ajv": "^8.12.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
     "clsx": "^1.2.1",
     "cpr": "^3.0.1",
@@ -174,9 +174,9 @@
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.6.2",
     "remark-gfm": "^3.0.1",
-    "rollup-plugin-visualizer": "^5.11.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sinon": "^17.0.1",
-    "stylelint": "^16.0.2",
+    "stylelint": "^16.2.0",
     "stylelint-config-recommended": "^14.0.0",
     "superstruct": "^1.0.3",
     "ts-json-schema-generator": "^1.5.0",
@@ -184,14 +184,14 @@
     "typescript": "5.3.3",
     "typescript-plugin-css-modules": "^5.0.2",
     "uhtml": "^4.1.21",
-    "utility-types": "^3.10.0",
+    "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
-    "vite": "^5.0.10",
-    "vite-plugin-html": "^3.2.0",
-    "vite-plugin-mkcert": "^1.17.1",
-    "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "^1.0.4",
-    "wretch": "^2.7.1"
+    "vite": "^5.0.12",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-mkcert": "^1.17.3",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.2.1",
+    "wretch": "^2.8.0"
   },
   "devDependencies": {
     "husky": "^8.0.3",
