- move bivariate stats to core/resources - fix types error - mcda editor added

--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@reatom/core": "^3.6.6",
     "@reatom/core-v2": "^3.1.2",
+    "@reatom/npm-react": "^3.8.1",
     "@reatom/react-v2": "^3.1.0",
     "@testing-library/react": "^14.1.2",
     "@turf/area": "6.5.0",
@@ -155,7 +156,6 @@
     "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
     "postcss-custom-media": "^8.0.2",
-    "postcss-loader": "^7.3.3",
     "postcss-nested": "^6.0.1",
     "postcss-normalize": "^10.0.1",
     "prettier": "^3.1.1",
