--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "node": ">=20"
   },
   "scripts": {
-    "dev": "npm run i18n:import && vite",
-    "cosmos": "npm run i18n:import && run-p auto:cosmos:renderer auto:cosmos auto:open",
+    "dev": "pnpm run i18n:import && vite",
+    "cosmos": "pnpm run i18n:import && run-p auto:cosmos:renderer auto:cosmos auto:open",
     "cosmos:build": "run-s i18n:import auto:cosmos:export auto:cosmos:renderer:export",
-    "build": "npm run i18n:import && vite build",
+    "build": "pnpm run i18n:import && vite build",
     "serve": "vite preview",
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "tsc --noEmit --watch",
     "preupgrade:kontur": "node ./scripts/updateKonturPackages.mjs",
     "upgrade:kontur": "pnpm update $(node ./scripts/updateKonturPackages.mjs)",
     "lint-staged": "lint-staged --concurrent false",
-    "test:unit": "npm run i18n:import && vitest",
-    "coverage": "npm run i18n:import && vitest run --coverage",
+    "test:unit": "pnpm run i18n:import && vitest",
+    "coverage": "pnpm run i18n:import && vitest run --coverage",
     "lint": "npm-run-all lint:js lint:css depcruise",
     "lint:js": "eslint --quiet --ext .tsx,.ts src/",
     "lint:css": "stylelint ./src/**/*.css",
@@ -86,7 +86,7 @@
     "@konturio/default-icons": "^2.2.2",
     "@konturio/default-theme": "3.2.4",
     "@konturio/floating": "^1.1.1",
-    "@konturio/ui-kit": "^5.1.6",
+    "@konturio/ui-kit": "^5.1.7",
     "@loaders.gl/core": "^3.4.14",
     "@loaders.gl/loader-utils": "^3.4.14",
     "@loaders.gl/worker-utils": "^3.4.14",
