--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@github/mini-throttle": "^2.1.1",
     "@homer0/deferred": "^3.0.1",
     "@konturio/default-icons": "^2.2.2",
-    "@konturio/default-theme": "3.2.4",
+    "@konturio/default-theme": "~3.2.5",
     "@konturio/floating": "^1.1.1",
     "@konturio/ui-kit": "^5.1.10",
     "@loaders.gl/core": "^3.4.14",
@@ -116,11 +116,11 @@
     "@types/react-transition-group": "^4.4.10",
     "@types/sinon": "^17.0.3",
     "@types/w3c-generic-sensor": "^1.0.9",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "@uiw/react-github-corners": "1.5.16",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.2.1",
+    "@vitest/coverage-v8": "^1.2.2",
     "ajv": "^8.12.0",
     "autoprefixer": "^10.4.17",
     "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
@@ -172,7 +172,7 @@
     "react-router-cache-route": "^1.12.11",
     "react-router-dom": "^5.3.4",
     "react-transition-group": "^4.4.5",
-    "react-virtuoso": "^4.6.2",
+    "react-virtuoso": "^4.6.3",
     "remark-gfm": "^3.0.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "sinon": "^17.0.1",
@@ -190,7 +190,7 @@
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.3",
     "vite-tsconfig-paths": "^4.3.1",
-    "vitest": "^1.2.1",
+    "vitest": "^1.2.2",
     "wretch": "^2.8.0"
   },
   "devDependencies": {
