--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@reatom/core": "^3.6.6",
     "@reatom/core-v2": "^3.1.2",
+    "@reatom/logger": "^3.6.0",
     "@reatom/npm-react": "^3.8.2",
     "@reatom/react-v2": "^3.1.0",
     "@testing-library/react": "^14.2.1",
@@ -116,8 +117,8 @@
     "@types/react-transition-group": "^4.4.10",
     "@types/sinon": "^17.0.3",
     "@types/w3c-generic-sensor": "^1.0.9",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@uiw/react-github-corners": "1.5.16",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.2.2",
@@ -181,7 +182,7 @@
     "superstruct": "^1.0.3",
     "ts-json-schema-generator": "^1.5.0",
     "tsx": "^4.7.0",
-    "typescript": "5.3.3",
+    "typescript": "5.2.2",
     "typescript-plugin-css-modules": "^5.0.2",
     "uhtml": "^4.4.7",
     "utility-types": "^3.11.0",
