--- a/package.json
+++ b/package.json
@@ -92,11 +92,12 @@
     "@loaders.gl/worker-utils": "^3.4.14",
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
-    "@reatom/core": "^3.6.6",
+    "@reatom/core": "^3.7.0",
     "@reatom/core-v2": "^3.1.2",
-    "@reatom/npm-react": "^3.8.3",
+    "@reatom/logger": "^3.6.0",
+    "@reatom/npm-react": "^3.8.4",
     "@reatom/react-v2": "^3.1.0",
-    "@sentry/react": "^7.101.1",
+    "@sentry/react": "^7.105.0",
     "@testing-library/react": "^14.2.1",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
@@ -108,10 +109,10 @@
     "@turf/union": "^6.5.0",
     "@types/file-saver": "^2.0.7",
     "@types/geojson": "^7946.0.14",
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.11.25",
     "@types/papaparse": "^5.3.14",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.10",
@@ -121,21 +122,21 @@
     "@typescript-eslint/parser": "^6.20.0",
     "@uiw/react-github-corners": "1.5.16",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/coverage-v8": "^1.3.1",
     "ajv": "^8.12.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
     "clsx": "^1.2.1",
     "cpr": "^3.0.1",
     "date-fns": "^2.30.0",
     "dependency-cruiser": "^15.5.0",
     "dnd-core": "^16.0.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-i18n-checker": "^1.4.0",
     "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-saver": "^2.0.5",
     "geojson-polygon-self-intersections": "^1.2.1",
@@ -151,7 +152,7 @@
     "lint-staged": "^15.2.2",
     "maplibre-gl": "^3.6.2",
     "minimist": "^1.2.8",
-    "nanoid": "^5.0.5",
+    "nanoid": "^5.0.6",
     "nanoid-dictionary": "^4.3.0",
     "npm-run-all": "^4.1.5",
     "papaparse": "^5.4.1",
@@ -173,7 +174,7 @@
     "react-router-cache-route": "^1.12.11",
     "react-router-dom": "^5.3.4",
     "react-transition-group": "^4.4.5",
-    "react-virtuoso": "^4.6.3",
+    "react-virtuoso": "^4.7.1",
     "remark-gfm": "^3.0.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "sinon": "^17.0.1",
@@ -182,23 +183,23 @@
     "superstruct": "^1.0.3",
     "ts-json-schema-generator": "^1.5.0",
     "tsx": "^4.7.1",
-    "typescript": "5.3.3",
+    "typescript": "5.4.2",
     "typescript-plugin-css-modules": "^5.1.0",
     "uhtml": "^4.4.9",
     "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
-    "vite": "~5.0.12",
+    "vite": "~5.1.5",
     "vite-plugin-html": "^3.2.2",
-    "vite-plugin-mkcert": "^1.17.3",
+    "vite-plugin-mkcert": "^1.17.4",
     "vite-tsconfig-paths": "^4.3.1",
-    "vitest": "^1.2.2",
-    "wretch": "^2.8.0"
+    "vitest": "^1.3.1",
+    "wretch": "^2.8.1"
   },
   "devDependencies": {
     "chalk": "^5.3.0",
     "husky": "^8.0.3",
     "open-cli": "^7.2.0",
     "prompts": "^2.4.2",
-    "semver": "^7.5.4"
+    "semver": "^7.6.0"
   }
 }
