--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "@reatom/core": "^3.6.6",
     "@reatom/core-v2": "^3.1.2",
     "@reatom/react-v2": "^3.1.0",
-    "@testing-library/react": "^14.1.2",
+    "@sentry/react": "^7.101.1",
+    "@testing-library/react": "^14.2.1",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
     "@turf/centroid": "^6.5.0",
