--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "wretch": "^2.8.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.1",
     "chalk": "^5.3.0",
     "husky": "^8.0.3",
     "open-cli": "^7.2.0",
