--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ package-lock.json
 .env.development.local
 .env.test.local
 .env.production.local
+.env.playwright.local
 
 web_modules
 
@@ -57,3 +58,7 @@ src/core/localization/translations/**
 
 size-report.json
 translations-report.md
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
