--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@turf/helpers": "^6.5.0",
     "@turf/kinks": "^6.5.0",
     "@turf/union": "^6.5.0",
+    "@types/d3-color": "^3.1.3",
     "@types/d3-interpolate": "^3.0.4",
     "@types/file-saver": "^2.0.7",
     "@types/geojson": "^7946.0.14",
@@ -129,6 +130,7 @@
     "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
     "clsx": "^1.2.1",
     "cpr": "^3.0.1",
+    "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "date-fns": "^2.30.0",
     "dependency-cruiser": "^15.5.0",
