--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -1,21 +1,21 @@
 name: Run e2e autotests on ${{ github.event.inputs.env }} by ${{ github.actor }}
 
 env:
-  test_atlas_url: "https://test-apps-ninja01.konturlabs.com/"
-  dev_atlas_url: "https://test-apps-ninja02.konturlabs.com/"
-  prod_atlas_url: "https://atlas.kontur.io/"
+  test_atlas_url: 'https://test-apps-ninja01.konturlabs.com/'
+  dev_atlas_url: 'https://test-apps-ninja02.konturlabs.com/'
+  prod_atlas_url: 'https://atlas.kontur.io/'
 
-  test_disaster_ninja_url: "https://test-apps-ninja01.konturlabs.com/"
-  dev_disaster_ninja_url: "https://test-apps-ninja02.konturlabs.com/"
-  prod_disaster_ninja_url: "https://disaster.ninja/"
+  test_disaster_ninja_url: 'https://test-apps-ninja01.konturlabs.com/'
+  dev_disaster_ninja_url: 'https://test-apps-ninja02.konturlabs.com/'
+  prod_disaster_ninja_url: 'https://disaster.ninja/'
 
-  test_smart_city_url: "https://test-apps-ninja01.konturlabs.com/"
-  dev_smart_city_url: "https://test-apps-ninja02.konturlabs.com/"
-  prod_smart_city_url: "https://maps.kontur.io/"
+  test_smart_city_url: 'https://test-apps-ninja01.konturlabs.com/'
+  dev_smart_city_url: 'https://test-apps-ninja02.konturlabs.com/'
+  prod_smart_city_url: 'https://maps.kontur.io/'
 
-  test_oam_url: "https://test-apps-ninja01.konturlabs.com/"
-  dev_oam_url: "https://test-apps-ninja02.konturlabs.com/"
-  prod_oam_url: "https://new.openaerialmap.org/"
+  test_oam_url: 'https://test-apps-ninja01.konturlabs.com/'
+  dev_oam_url: 'https://test-apps-ninja02.konturlabs.com/'
+  prod_oam_url: 'https://new.openaerialmap.org/'
 
 on:
   workflow_dispatch: # Trigger manual run
@@ -30,8 +30,8 @@ on:
 
 jobs:
   run_tests:
+    name: Run e2e tests
     runs-on: ubuntu-latest # Run Ubuntu
-
     steps:
       - name: Checkout code # Copy repository and move to the needed branch
         uses: actions/checkout@v2
@@ -59,7 +59,7 @@ jobs:
             echo "TEST_EMAIL=${{ secrets.PROD_EMAIL }}" >> .env.playwright.local
             echo "TEST_PASSWORD=${{ secrets.PROD_PASSWORD }}" >> .env.playwright.local
           fi
-       - name: Adjust project URLs # If launch is test or dev, change urls at projects-config.json
+      - name: Adjust project URLs # If launch is test or dev, change urls at projects-config.json
         run: |
           if [[ "${{ github.event.inputs.env }}" == "test" ]]; then
             sed -i "s|\"url\": \"$prod_atlas_url\"|\"url\": \"$test_atlas_url\"|g" e2e/projects-config.json
@@ -73,8 +73,8 @@ jobs:
             sed -i "s|\"url\": \"$prod_oam_url\"|\"url\": \"$dev_oam_url\"|g" e2e/projects-config.json
           fi
 
-  - name: Move to e2e directory # Move to e2e
-    run: cd e2e
+      - name: Move to e2e directory # Move to e2e
+        run: cd e2e
 
-  - name: Run tests # Run tests in headless way
-    run: npx playwright test
+      - name: Run tests # Run tests in headless way
+        run: npx playwright test
