--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -1,5 +1,4 @@
 name: Run e2e autotests
-
 on:
   workflow_dispatch: # Trigger manual run
     inputs:
@@ -15,15 +14,12 @@ env:
   test_atlas_url: 'https://test-apps-ninja01.konturlabs.com/'
   dev_atlas_url: 'https://test-apps-ninja02.konturlabs.com/'
   prod_atlas_url: 'https://atlas.kontur.io/'
-
   test_disaster_ninja_url: 'https://test-apps-ninja01.konturlabs.com/'
   dev_disaster_ninja_url: 'https://test-apps-ninja02.konturlabs.com/'
   prod_disaster_ninja_url: 'https://disaster.ninja/'
-
   test_smart_city_url: 'https://test-apps-ninja01.konturlabs.com/'
   dev_smart_city_url: 'https://test-apps-ninja02.konturlabs.com/'
   prod_smart_city_url: 'https://maps.kontur.io/'
-
   test_oam_url: 'https://test-apps-ninja01.konturlabs.com/'
   dev_oam_url: 'https://test-apps-ninja02.konturlabs.com/'
   prod_oam_url: 'https://new.openaerialmap.org/'
@@ -35,18 +31,15 @@ jobs:
     steps:
       - name: Checkout code # Copy repository and move to the needed branch
         uses: actions/checkout@v2
-
       - name: Setup Node.js # Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '21' # Node.js version
-
       - name: Update playwright and install dependencies # Update playwright and install dependencies
         run: |
           npm install -g playwright@latest
           npm install -D @playwright/test@latest
           npx playwright install --with-deps
-
       - name: Create .env file # Create .env.playwright.local with secrets
         run: |
           if [[ "${{ github.event.inputs.env }}" == "test" ]]; then
@@ -72,9 +65,7 @@ jobs:
             sed -i "s|\"url\": \"$prod_smart_city_url\"|\"url\": \"$dev_smart_city_url\"|g" e2e/projects-config.json
             sed -i "s|\"url\": \"$prod_oam_url\"|\"url\": \"$dev_oam_url\"|g" e2e/projects-config.json
           fi
-
       - name: Move to e2e directory # Move to e2e
-        run: cd e2e
-
+        working-directory: ./e2e
       - name: Run tests # Run tests in headless way
         run: npx playwright test
