Ignore e2e and config changes in CI workflows
This commit updates the GitHub Actions workflow files to ignore changes
in 'e2e/' directory and 'playwright.config.ts' file. This is done to
prevent unnecessary CI runs when changes are made to end-to-end tests
or the Playwright configuration. Additionally, the commit standardizes
the use of single quotes for consistency across the workflow files.

--- a/.github/workflows/deploy_cosmos.yml
+++ b/.github/workflows/deploy_cosmos.yml
@@ -2,6 +2,9 @@ name: Deploy master branch to GitHub Pages
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'e2e/**'
+      - 'playwright.config.ts'
 permissions:
   contents: write
 
