--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,19 +2,25 @@ name: build
 on:
   push:
     branches:
-      - "main"
-      - "release-*"
+      - 'main'
+      - 'release-*'
+    paths-ignore:
+      - 'e2e/**'
+      - 'playwright.config.ts'
   pull_request:
     types:
       - opened
       - reopened
       - ready_for_review
       - synchronize
+    paths-ignore:
+      - 'e2e/**'
+      - 'playwright.config.ts'
   workflow_dispatch:
 
 env:
   NODE_ENV: production
-  AVA_FORCE_CI: "not-ci"
+  AVA_FORCE_CI: 'not-ci'
   REGISTRY: ghcr.io
   IMAGE_REPO: ${{ github.repository }}
 
@@ -27,8 +33,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "20"
-          
+          node-version: '20'
+
       - run: corepack enable
       - run: corepack prepare pnpm@8 --activate
       - name: Get pnpm store directory
@@ -69,7 +75,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: '20'
       - run: corepack enable
       - run: corepack prepare pnpm@8 --activate
       - name: Get pnpm store directory
