fix: fix create env file script (#694)
* fix: fix create env file script

* feat: ignore not required pipelines

* Apply suggestions from code review

fix typos

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/deploy_cosmos.yml
+++ b/.github/workflows/deploy_cosmos.yml
@@ -2,6 +2,10 @@ name: Deploy master branch to GitHub Pages
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'e2e/**'
+      - 'playwright.config.ts'
+      - '.github/workflows/run_e2e_tests.yml'
 permissions:
   contents: write
 
