fix: fix changing working dir

--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -61,6 +61,5 @@ jobs:
           echo "EMAIL=$EMAIL" >> .env.playwright.production
           echo "PASSWORD=$PASSWORD" >> .env.playwright.production
 
-      - name: Move to e2e directory and run tests
-        working-directory: ./e2e
+      - name: Run tests
         run: npx playwright test
