feat: increase ci workers count (#697)
* feat: increase ci workers count

* feat: update timeouts

* fix: allow to build pipeline

* fix: fix typo

* feat: accept cookies early

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,10 @@ on:
       - reopened
       - ready_for_review
       - synchronize
-    paths-ignore:
-      - 'e2e/**'
-      - 'playwright.config.ts'
-      - '.github/workflows/run_e2e_tests.yml'
+    # paths-ignore:
+    #   - 'e2e/**'
+    #   - 'playwright.config.ts'
+    #   - '.github/workflows/run_e2e_tests.yml'
   workflow_dispatch:
 
 env:
