[Localization] Create links check autotest ( complexed localization links vitest test ) (#718)
* created complexed localization links test

* fixes by rabbit review

* fix dependancies

* fix path to mdast

* update vitest

* fixing types

* fix comment to function

* fixed namings, type, comments, architecture

--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-saver": "^2.0.5",
     "geojson-polygon-self-intersections": "^1.2.1",
+    "gettext-parser": "^8.0.0",
     "happy-dom": "^12.10.3",
     "hash-wasm": "^4.11.0",
     "history": "^4.10.1",
@@ -155,6 +156,8 @@
     "jwt-decode": "^4.0.0",
     "lint-staged": "^15.2.2",
     "maplibre-gl": "^3.6.2",
+    "mdast": "^3.0.0",
+    "mdast-util-from-markdown": "^2.0.0",
     "minimist": "^1.2.8",
     "nanoid": "^5.0.7",
     "nanoid-dictionary": "^4.3.0",
@@ -202,6 +205,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
+    "@types/gettext-parser": "^4.0.4",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "husky": "^8.0.3",
